--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -141,7 +141,11 @@ en:
       button:
         fail: Okay
         jobfail: Try again tomorrow
+        timeout: Try again
         warning: Try again
+      errors:
+        link: please contact us
+        text: If you keep getting these errors, %{link}, or try again tomorrow.
       phone:
         fail: For your security, identity verification for your account is <strong>locked
           for 24 hours</strong>.
