[LG-256] Add spinner when presenting piv/cac cert
**Why**:
The browser UX might take a while, and we don't want the
user to feel that everything is frozen up.

**How**:
When the user clicks on the button to present their piv/cac
cert, we intercept the event and change the content to be a
GIF spinner. We let the event continue so the browser follows
through with the request.

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -99,6 +99,7 @@ es:
       max_personal_key_login_attempts_reached: Para su seguridad, su cuenta ha sido
         bloqueada temporalmente porque ha ingresado incorrectamente la clave personal
         demasiadas veces.
+      max_piv_cac_login_attempts_reached: NOT TRANSLATED YET
       otp_delivery_preference:
         instruction: Puede cambiar esta selección la próxima vez que inicie sesión.
         phone_unsupported: NOT TRANSLATED YET
