--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -97,6 +97,9 @@ en:
       max_personal_key_login_attempts_reached: For your security, your account is
         temporarily locked because you have entered the personal key incorrectly too
         many times.
+      max_piv_cac_login_attempts_reached: For your security, your account is temporarily
+        locked because you have presented your piv/cac credential incorrectly too
+        many times.
       otp_delivery_preference:
         instruction: You can change this selection the next time you log in. If you
           entered a landline, please select "Phone call" below.
