--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -22,7 +22,6 @@ es:
     errors:
       bad_dob: Su fecha de nacimiento debe ser una fecha válida.
       duplicate_ssn: Ya existe una cuenta con la información que proporcionó.
-      hardfail: No pudimos verificar su identidad en este momento.
       incorrect_password: La contraseña que ingresó no es correcta.
       mail_limit_reached: Usted ha solicitado demasiado correo en el último mes.
       pattern_mismatch:
@@ -75,7 +74,6 @@ es:
       dupe_ssn2_html: Por favor %{link} con el email que utilizó originalmente.
       dupe_ssn2_link: Cerrar ahora y volver a iniciar sesión
       hardfail: NOT TRANSLATED YET
-      hardfail4_html: NOT TRANSLATED YET
       help_center_html: Visite nuestro <strong>Centro de Ayuda</strong> para obtener
         más información sobre la verificación de su cuenta.
       jurisdiction:
@@ -145,6 +143,9 @@ es:
         jobfail: Inténtelo de nuevo mañana
         timeout: Inténtelo de nuevo
         warning: Inténtelo de nuevo
+      errors:
+        link: contáctanos
+        text: Si sigues recibiendo estos errores, %{link} o vuelve a intentarlo mañana.
       phone:
         fail: Para su seguridad, la verificación de identidad de su cuenta está <strong>bloqueada
           durante 24 horas</strong>.
