Update spec, i18n path

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -31,6 +31,35 @@ en:
         zipcode: 'Your zipcode must be entered in as #####-####'
       unsupported_jurisdiction: Sorry, we can't verify people from this state.
       unsupported_jurisdiction_sp: Please visit %{sp_name} to access your account.
+    failure:
+      attempts:
+        one: You have <strong>1 attempt remaining.</strong>
+        other: You have <strong>%{count} attempts remaining.</strong>
+      button:
+        fail: Okay
+        jobfail: Try again tomorrow
+        timeout: Try again
+        warning: Try again
+      errors:
+        link: please contact us
+        text: If you keep getting these errors, %{link}, or try again tomorrow.
+      phone:
+        fail: For your security, identity verification for your account is <strong>locked
+          for 24 hours</strong>.
+        heading: We could not find records matching your phone information.
+        jobfail: Something went wrong and we cannot process your request at this time.
+          Please try again tomorrow.
+        timeout: Our request to verify your information timed out.
+        warning: Please check the information you entered.
+      sessions:
+        fail: For your security, identity verification for your account is <strong>locked
+          for 24 hours</strong>.
+        heading: We could not find records matching your personal information.
+        jobfail: Something went wrong and we cannot process your request at this time.
+          Please try again tomorrow.
+        timeout: Our request to verify your information timed out.
+        warning: Please check the information you entered. Common mistakes are an
+          incorrect Social Security Number, ZIP Code, or date of birth.
     form:
       activate_by_mail: get a code via mail instead ›
       address1: Address
@@ -132,35 +161,6 @@ en:
         success: It should arrive in 5 to 10 business days.
       agencies_login: You can now continue to and log into these agencies.
       agency_login_html: You can now continue to and into <br><strong>%{sp}</strong>.
-    modal:
-      attempts:
-        one: You have <strong>1 attempt remaining.</strong>
-        other: You have <strong>%{count} attempts remaining.</strong>
-      button:
-        fail: Okay
-        jobfail: Try again tomorrow
-        timeout: Try again
-        warning: Try again
-      errors:
-        link: please contact us
-        text: If you keep getting these errors, %{link}, or try again tomorrow.
-      phone:
-        fail: For your security, identity verification for your account is <strong>locked
-          for 24 hours</strong>.
-        heading: We could not find records matching your phone information.
-        jobfail: Something went wrong and we cannot process your request at this time.
-          Please try again tomorrow.
-        timeout: Our request to verify your information timed out.
-        warning: Please check the information you entered.
-      sessions:
-        fail: For your security, identity verification for your account is <strong>locked
-          for 24 hours</strong>.
-        heading: We could not find records matching your personal information.
-        jobfail: Something went wrong and we cannot process your request at this time.
-          Please try again tomorrow.
-        timeout: Our request to verify your information timed out.
-        warning: Please check the information you entered. Common mistakes are an
-          incorrect Social Security Number, ZIP Code, or date of birth.
     review:
       dob: Date of birth
       full_name: Full name
