Add piv/cac subject to attributes for move.mil
**Why**:
Move.mil needs to know the subject of the piv/cac so
they can link the user's account to resources in DoD.

**How**:
Add the subject of the cert to the attribute bundle
provided via OIDC.

--- a/config/locales/help_text/fr.yml
+++ b/config/locales/help_text/fr.yml
@@ -12,6 +12,7 @@ fr:
         %{sp}:'
       phone: Numéro de téléphone
       social_security_number: Numéro de sécurité sociale
+      x509_subject: NOT TRANSLATED YET
     no_factor:
       delete_account: Pour supprimer votre compte, veuillez confirmer votre mot de
         passe et votre code de sécurité.
