--- a/config/locales/help_text/en.yml
+++ b/config/locales/help_text/en.yml
@@ -11,6 +11,7 @@ en:
       intro_html: 'This is the only information %{app_name} will share with %{sp}:'
       phone: Phone number
       social_security_number: Social Security number
+      x509_subject: PIV/CAC Identity
     no_factor:
       delete_account: To delete your account, please confirm your password and security
         code.
