LG-382 Implement account reset via delayed delete
**Why**: Users that are unable to 2FA are forced to create a new account with a new email.

**How**: Allow users to request to delete their account if they are unable to 2FA. After 24 hours they will receive a link which allows them to delete their account.

--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -4,3 +4,7 @@ en:
     sms_otp_sender_job:
       message: "%{code} is your %{app} one-time security code. This code will expire
         in %{expiration} minutes."
+    sms_account_reset_notifier_job:
+      message: 'You''ve requested to delete your login.gov account. Your request will
+        be processed in 24 hours. If you don’t want to delete your account, please
+        cancel: %{cancel_link}'
