--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -4,3 +4,7 @@ es:
     sms_otp_sender_job:
       message: "%{code} es su %{app} código de seguridad de sólo un uso. Este código
         caducará en %{expiration} minutos."
+    sms_account_reset_notifier_job:
+      message: 'Has solicitado eliminar tu cuenta de login.gov. Su solicitud será
+        ser procesado en 24 horas. Si no desea eliminar su cuenta, por favor cancelar:
+        %{cancel_link}'
