--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -6,7 +6,6 @@ es:
       link_text: NOT TRANSLATED YET
       subject: NOT TRANSLATED YET
     account_reset_request:
-      cancel_link_text: haga clic aquí
       help: ''
       intro: Usted está recibiendo este correo electrónico porque solicitó eliminar
         su login.gov cuenta.<br><br><strong>Su solicitud se procesará en 24 horas.</strong><br><br>Si
@@ -14,8 +13,8 @@ es:
       subject: Eliminar su cuenta
       contact_us: Contáctenos
     account_reset_granted:
-      cancel_link_text: haga clic aquí
-      help: Si no hizo esta solicitud, por favor %{cancel_account_reset}.
+      cancel_link_text: por favor cancele
+      help: Si no desea eliminar su cuenta, %{cancel_account_reset}.
       intro: Recibes este correo electrónico porque solicitaste eliminar y restablecer
         su cuenta de login.gov<br><br>Eliminar tu cuenta debería ser tu último recurso
         si está bloqueado de su cuenta. No podrás recuperar cualquier información
