--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -7,11 +7,10 @@ fr:
       subject: NOT TRANSLATED YET
     account_reset_request:
       help: ''
-      intro: Vous recevez cet e-mail parce que vous avez demandé à supprimer votre
-        login.gov compte. <br><br><strong>Votre demande sera traitée dans les 24 heures.</strong><br><br>Si
-        vous n'avez pas demandé de suppression, <u>%{contact_us_link}</u>.
+      intro: Vous avez demandé à supprimer votre compte login.gov.<br><br><strong>Votre
+        la demande sera traitée dans les 24 heures.</strong><br><br>Si vous ne voulez
+        pas pour supprimer votre compte, <u>%{cancel_account_reset}</u>.
       subject: Supprimer votre compte
-      contact_us: Contactez nous
     account_reset_granted:
       cancel_link_text: veuillez annuler
       help: Si vous ne souhaitez pas supprimer votre compte, %{cancel_account_reset}.
