[LG-418] Selection presenters for 2fa methods
**Why**:
We want to normalize how we manage presenting the
selection of 2FA methods.

**How**:
Make a set of presenters, one per method, and use
those to manage the information that we pour into
the HTML.

--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -171,8 +171,8 @@ en:
         voice_info: Get your security code via phone call.
         sms: Text message / SMS
         sms_info: Get your security code via text message / SMS.
-        auth_app: Authentication application
-        auth_app_info: Set up an authentication application to get your security code
+        totp: Authentication application
+        totp_info: Set up an authentication application to get your security code
           without providing a phone number.
         piv_cac: Government employees
         piv_cac_info: Use your PIV/CAC card to secure your account.
