--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -186,9 +186,9 @@ fr:
         voice_info: Obtenez votre code de sécurité par appel téléphonique.
         sms: SMS
         sms_info: Obtenez votre code de sécurité par SMS
-        auth_app: Application d'authentification
-        auth_app_info: Configurez une application d'authentification pour obtenir
-          votre code de sécurité sans fournir de numéro de téléphone.
+        totp: Application d'authentification
+        totp_info: Configurez une application d'authentification pour obtenir votre
+          code de sécurité sans fournir de numéro de téléphone.
         piv_cac: Employés du gouvernement
         piv_cac_info: Utilisez votre carte PIV / CAC pour sécuriser votre compte.
       two_factor_choice_intro: login.gov s'assure que vous pouvez accéder à votre
