Fix Intl SMS bugs more comprehensively
This is a follow up to the previous commit which adds the following:

- Rescue Twilio errors when signing in and display the OTP verification
page with an error message, allowing the user to try the phone call
option, or signing in with their personal key
- Capture the country code and context along with Twilio errors so we
can more easily see which countries are affected
- Don't change the user's OTP delivery preference if the last preference
they used resulted in a Twilio error. For example, if a user normally
uses voice, but for some reason didn't get the phone call, and then
tries to send an SMS to a landline, resulting in an error message, we
should leave their preference as voice so they won't get an error the
next time they sign in.
- Add the phone number country to the Exception Notification emails

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -40,6 +40,8 @@ en:
       otp_incorrect: Incorrect code. Did you type it correctly?
       password_incorrect: Incorrect password
       personal_key_incorrect: Incorrect personal key
+      phone_unsupported: Sorry, we are unable to send SMS at this time. Please try
+        the phone call option below, or use your personal key.
       requires_phone: requires you to enter your phone number.
       unauthorized_authn_context: Unauthorized authentication context
       unauthorized_nameid_format: Unauthorized nameID format
