--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -38,6 +38,8 @@ es:
       otp_incorrect: El código es incorrecto. ¿Lo escribió correctamente?
       password_incorrect: La contraseña es incorrecta
       personal_key_incorrect: La clave personal es incorrecta
+      phone_unsupported: Lo sentimos, no podemos enviar SMS en este momento. Pruebe
+        la opción de llamada telefónica a continuación o use su clave personal.
       requires_phone: requiere que ingrese su número de teléfono.
       unauthorized_authn_context: Contexto de autenticación no autorizado
       unauthorized_nameid_format: NOT TRANSLATED YET
