--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -7,7 +7,7 @@ fr:
     invalid_totp: Code non valide. Veuillez essayer de nouveau.
     max_password_attempts_reached: Vous avez inscrit des mots de passe incorrects
       un trop grand nombre de fois. Vous pouvez réinitialiser votre mot de passe en
-      utilisant le lien « Vous avez oublié votre mot de passe? ».
+      utilisant le lien « Vous avez oublié votre mot de passe? ».
     messages:
       already_confirmed: a déjà été confirmé, veuillez essayer de vous connecter
       blank: Veuillez remplir ce champ.
@@ -15,7 +15,7 @@ fr:
       confirmation_invalid_token: Lien de confirmation non valide. Le lien est expiré
         ou vous avez déjà confirmé votre compte.
       confirmation_period_expired: Lien de confirmation expiré. Vous pouvez cliquer
-        sur « Envoyer les instructions de confirmation de nouveau » pour en obtenir
+        sur « Envoyer les instructions de confirmation de nouveau » pour en obtenir
         un autre.
       expired: est expiré, veuillez en demander un nouveau
       format_mismatch: Veuillez vous assurer de respecter le format requis.
@@ -33,12 +33,16 @@ fr:
       not_found: introuvable
       not_locked: n'a pas été verrouillé
       not_saved:
-        one: '1 erreur a interdit la sauvegarde de cette %{resource} :'
-        other: "%{count} des erreurs ont empêché la sauvegarde de cette %{resource} :"
+        one: '1 erreur a interdit la sauvegarde de cette %{resource} :'
+        other: "%{count} des erreurs ont empêché la sauvegarde de cette %{resource}
+          :"
       otp_failed: NOT TRANSLATED YET
       otp_incorrect: Code non valide. L'avez-vous inscrit correctement?
       password_incorrect: Mot de passe incorrect
       personal_key_incorrect: Clé personnelle incorrecte
+      phone_unsupported: Désolé, nous ne sommes pas en mesure d'envoyer des SMS pour
+        le moment. S'il vous plaît essayez l'option d'appel téléphonique ci-dessous,
+        ou utilisez votre clé personnelle.
       requires_phone: vous demande d'entrer votre numéro de téléphone.
       twilio_inbound_sms_invalid: Le message SMS Twilio entrant a échoué à la validation.
       unauthorized_authn_context: Contexte d'authentification non autorisé
