LG-428 Build 2FA selection at sign in
**Why**:  We need the ability to select from multiple two factor methods in a streamlined manner.

**How**: Create a new 2fa selection screen upon login which will display 2fa options currently configured for the user.  Add a new configure additional 2fa methods screen prior to the redirect back to the SP (or accounts page) which will present 2fa options not yet configured for the user so they can add additional second factors to their accounts as they become available.  Standardize and simplify all the 2fa screens with a single layout with clear instructions for each 2fa including a remember browser option as well as options to select a different 2fa or cancel.  Provide an account reset option (or pending cancel) as a last resort.  Finally, this PR DRYs up the code somewhat.  However, a subsequent PR will refactor both the creation and login process into a more service based architecture.

--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -17,7 +17,6 @@ es:
     passwords:
       forgot: "¿Olvidó su contraseña?"
     phone_confirmation:
-      auth_app_fallback_html: o %{link}.
       fallback_to_sms_html: Envíeme un mensaje de texto con el código en su lugar
       fallback_to_voice_html: Si no puede recibir un mensaje de texto ahora mismo,
         puede obtener un código de seguridad a través de %{link}
@@ -29,10 +28,5 @@ es:
     sign_out: Cerrar sesión
     two_factor_authentication:
       app_option: Use una aplicación de autenticación en su lugar.
-      app: Obtener un código de seguridad mediante la app de autenticación
-      resend_code:
-        sms: Obtener otro mensaje de texto
-        voice: Obtener otra llamada telefónica
-      sms: Obtener un código de seguridad a través de un mensaje de texto
-      voice: Obtener un código de seguridad a través de una llamada telefónica
+      get_another_code: Obtener otro código
     what_is_totp: "¿Qué es una app de autenticación?"
