Format cancellation templates, add translations and modify specs

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -5,6 +5,7 @@ en:
       legend: Select a secondary authentication option
     buttons:
       back: Back
+      cancel: Yes, cancel
       continue: Continue
       disable: Disable
       edit: Edit
