--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -5,6 +5,7 @@ es:
       legend: NOT TRANSLATED YET
     buttons:
       back: Atrás
+      cancel: Sí, cancelar
       continue: Continuar
       disable: Suspender
       edit: Editar
