--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -12,6 +12,7 @@ en:
     contact: Contact
     copy: Copy
     create_account: Create account
+    go_back: Go back
     help: Help
     next: Next
     passwords:
