--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -12,6 +12,7 @@ es:
     contact: Contactar
     copy: Copiar
     create_account: Crear cuenta
+    go_back: Regresa
     help: Ayuda
     next: Siguiente
     passwords:
