--- a/config/locales/links/fr.yml
+++ b/config/locales/links/fr.yml
@@ -12,6 +12,7 @@ fr:
     contact: Contact
     copy: Copier
     create_account: Créer un compte
+    go_back: Retourner
     help: Aide
     next: Suivant
     passwords:
