--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -11,6 +11,10 @@ en:
       verified_account: Verified Account
     account_recovery_setup:
       piv_cac_linked: Your PIV/CAC card is linked to your account
+    cancellations:
+      confirmation: You have cancelled verifying your identity with login.gov
+      prompt: Are you sure you want to cancel?
+      return_to: Return to
     confirmations:
       new: Send another confirmation email
     create_account_with_sp:
