--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -13,7 +13,7 @@ es:
       piv_cac_linked: NOT TRANSLATED YET
     cancellations:
       confirmation: Ha cancelado la verificación de su identidad con login.gov
-      prompt: ¿Estas seguro que quieres cancelar?
+      prompt: "¿Estas seguro que quieres cancelar?"
       return_to: Volver a
     confirmations:
       new: Enviar otro email de confirmación
