LG-449 - Cancelling account deletion should notify both factors
Why: Other than our event log and db there is no forensic evidence of a cancellation and an attacker controlling one of the factors can cancel the deletion.

How: Add an SMS and email to the cancel controller

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -151,8 +151,8 @@ es:
         el código de seguridad a continuación.
       please_try_again_html: Inténtelo de nuevo en <strong id=%{id}>%{time_remaining}</strong>.
       account_reset:
-        successful_cancel: Gracias. La solicitud para eliminar su cuenta de login.gov
-          ha sido cancelado.
+        successful_cancel: Gracias. Su solicitud para eliminar su cuenta de login.gov
+          ha sido cancelada.
         link: eliminando su cuenta
         text_html: Si no puede usar ninguna de estas opciones de seguridad anteriores,
           puede restablecer tus preferencias por %{link}.
