--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -5,6 +5,11 @@ fr:
       intro: NOT TRANSLATED YET
       link_text: NOT TRANSLATED YET
       subject: NOT TRANSLATED YET
+    account_reset_cancel:
+      intro: Cet e-mail confirme que vous avez annulé la demande de suppression de
+        votre compte login.gov.
+      subject: Supprimer votre compte
+      help: ''
     account_reset_request:
       help: ''
       intro: Vous avez demandé à supprimer votre compte login.gov.<br><br><strong>Votre
