--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -146,7 +146,7 @@ en:
         code below.
       please_try_again_html: Please try again in <strong id=%{id}>%{time_remaining}</strong>.
       account_reset:
-        successful_cancel: Thank you. The request to delete your login.gov account
+        successful_cancel: Thank you. Your request to delete your login.gov account
           has been cancelled.
         link: deleting your account
         text_html: If you can't use any of these security options above, you can reset
