--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -11,14 +11,15 @@ en:
       send_confirmation_code: Continue
     cancel:
       modal_header: Are you sure you want to cancel?
+      return_to_account: Return to account
       warning_header: If you cancel now
-      warning_points:
-      - We won’t be able to verify your identity
-      - We won't keep a record of your name, address, birth date, or Social Security
-        number
-      - You won't be able to securely access your information using login.gov
-      - You’ll still have a login.gov account for your email address
-      - You can manage that account on your profile page
+      warnings:
+        warning_1: We won't be able to verify your identity
+        warning_2: We won't keep a record of your name, address, birth date, or Social
+          Security number
+        warning_3: You won't be able to securely access you information using %{app}
+        warning_4: You'll still have a login.gov account for your email address
+        warning_5: You can manage or delete that account on your profile page
     errors:
       bad_dob: Your date of birth must be a valid date.
       duplicate_ssn: An account already exists with the information you provided.
