--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -11,15 +11,14 @@ fr:
       send_confirmation_code: NOT TRANSLATED YET
     cancel:
       modal_header: Souhaitez-vous vraiment annuler?
+      return_to_account: NOT TRANSLATED YET
       warning_header: Si vous annulez maintenant
-      warning_points:
-      - Nous ne serons pas en mesure de vérifier votre identité
-      - Nous ne conserverons pas de dossier contenant votre nom, adresse, date de
-        naissance ou numéro de sécurité sociale
-      - Vous ne pourrez pas accéder à votre information de manière sécuritaire en
-        utilisant login.gov
-      - Vous conserverez un compte login.gov pour votre adresse courriel
-      - Vous pouvez gérer ce compte sur la page de votre profil
+      warnings:
+        warning_1: NOT TRANSLATED YET
+        warning_2: NOT TRANSLATED YET
+        warning_3: NOT TRANSLATED YET
+        warning_4: NOT TRANSLATED YET
+        warning_5: NOT TRANSLATED YET
     errors:
       bad_dob: Votre date de naissance doit être une date valide.
       duplicate_ssn: Un compte existe déjà avec l'information que vous avez fournie.
