LG-484 Display a message to the user when an account reset link is expired
**Why**: Currently when a link to delete account is expired the user has no indication that the link was expired after clicking on it.  Moreover when there is a pending request for account reset and the token is expired, a cancel link still shows.  The user can cancel and create a new request.  However we should remove the cancel link when the token expires so that they can immediately create a new request.

**How**: Display a flash message to the user when the token is expired.  When there is a pending request check for a valid token rather than the existence of a token.

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -151,6 +151,8 @@ es:
         el código de seguridad a continuación.
       please_try_again_html: Inténtelo de nuevo en <strong id=%{id}>%{time_remaining}</strong>.
       account_reset:
+        link_expired: El enlace para eliminar su cuenta de login.gov ha caducado.
+          Crea otra solicitud para eliminar tu cuenta.
         successful_cancel: Gracias. Su solicitud para eliminar su cuenta de login.gov
           ha sido cancelada.
         link: eliminando su cuenta
