--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -146,6 +146,8 @@ en:
         code below.
       please_try_again_html: Please try again in <strong id=%{id}>%{time_remaining}</strong>.
       account_reset:
+        link_expired: The link to delete your login.gov account has expired.  Please
+          create another request to delete your account.
         successful_cancel: Thank you. Your request to delete your login.gov account
           has been cancelled.
         link: deleting your account
