--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -9,7 +9,7 @@ en:
       link_text: Create your account
       subject: Your login.gov password reset request
     account_reset_cancel:
-      intro: This email confirms you have cancelled the request to delete your login.gov
+      intro: This email confirms you have cancelled your request to delete your login.gov
         account.
       subject: Delete your account
       help: ''
