--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -49,6 +49,14 @@ en:
         %{help_link} or %{contact_link}.
       intro: The phone number associated with your %{app} account has been changed.
       subject: New phone number
+    please_reset_password:
+      call_to_action: To continue using your login.gov account, please reset your
+        password using the link below.
+      intro: During a login.gov security review, we found a problem with your password.
+        Although we did not see any suspicious activity on your login.gov account,
+        we have disabled your old password. Please reset your password to continue
+        using login.gov.
+      subject: Please reset your password
     signup_with_your_email:
       help: If you did not request a new account or suspect an error, please visit
         the %{app} %{help_link} or %{contact_link}.
