LG-450 Use different text in SMS for login vs account creation
**Why**: Currently we use the same notification text when sending verification codes during the login as we do during account creation. This means that if a user unexpectedly receives a verification code, they cannot distinguish between these two scenarios: A. (no big deal) Someone typo'd their phone number and is trying to create an account. B. (Huge deal, should change password immediately) Someone has their password and is attempting to log in to their actual account.

**How**: Update the SmsOtpSenderJob#perform method to take a message parameter. Use the existence of the user's personal key as the condition to send an account creation message vs a signing in message.

--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -8,5 +8,7 @@ en:
         be processed in 24 hours. If you don’t want to delete your account, please
         cancel: %{cancel_link}'
     sms_otp_sender_job:
-      message: "%{code} is your %{app} one-time security code. This code will expire
-        in %{expiration} minutes."
+      login_message: "%{code} is your %{app} security code. Use this to continue signing
+        in to your account. This code will expire in %{expiration} minutes."
+      verify_message: "%{code} is your %{app} confirmation code. Use this to confirm
+        your phone number. This code will expire in %{expiration} minutes."
