--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -8,5 +8,7 @@ es:
         ser procesado en 24 horas. Si no desea eliminar su cuenta, por favor cancelar:
         %{cancel_link}'
     sms_otp_sender_job:
-      message: "%{code} es su %{app} código de seguridad de sólo un uso. Este código
-        caducará en %{expiration} minutos."
+      login_message: "%{code} es tu código de seguridad de %{app}. Use esto para continuar
+        ingresando a su cuenta. Este código caducará en %{expiration} minutos."
+      verify_message: "%{code} es tu código de confirmación de %{app}. Use esto para
+        confirmar su número de teléfono. Este código caducará en %{expiration} minutos."
