--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -17,7 +17,7 @@ en:
         warning_1: We won't be able to verify your identity
         warning_2: We won't keep a record of your name, address, birth date, or Social
           Security number
-        warning_3: You won't be able to securely access you information using %{app}
+        warning_3: You won't be able to securely access your information using %{app}
         warning_4: You'll still have a login.gov account for your email address
         warning_5: You can manage or delete that account on your profile page
     errors:
