LG 363 LOA3 cancellation (#2341)
**Why**: We've re-designed the cancellation flow for LOA3 to make it a bit more straightforward. This means adding a new page for cancellations and removing the personal key confirmation (assuming the user will care more about when they come back later and reset their account if they don't have it).

--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -11,6 +11,9 @@ es:
       verified_account: Cuenta verificada
     account_recovery_setup:
       piv_cac_linked: NOT TRANSLATED YET
+    cancellations:
+      confirmation: Ha cancelado la verificación de su identidad con login.gov
+      prompt: "¿Estas seguro que quieres cancelar?"
     confirmations:
       new: Enviar otro email de confirmación
     create_account_with_sp:
