--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -11,6 +11,9 @@ fr:
       verified_account: Compte vérifié
     account_recovery_setup:
       piv_cac_linked: NOT TRANSLATED YET
+    cancellations:
+      confirmation: Vous avez annulé la vérification de votre identité avec login.gov
+      prompt: Es-tu sûre de vouloir annuler?
     confirmations:
       new: Envoyer un autre courriel de confirmation
     create_account_with_sp:
