LG-483 USAJOBS/ TTP create account state bug
**Why**: To provide clear agency specific instructions on account creation

**How**: Update the locale files.

--- a/config/locales/service_providers/en.yml
+++ b/config/locales/service_providers/en.yml
@@ -3,6 +3,7 @@ en:
   service_providers:
     learn_more: Learn more.
     sam:
+      header: First time here from SAM?
       account_page:
         body: Your old SAM username and password won’t work. Please create a login.gov
           account using the same email address you use for SAM.
@@ -12,7 +13,6 @@ en:
       create_account_page:
         body: Please create a login.gov account using the same email address you use
           for SAM.
-      header: First time here from SAM?
     trusted_traveler:
       account_page:
         body: Your old GOES userID and password won’t work. Please create a login.gov
@@ -30,5 +30,6 @@ en:
         using the same email address you use for USAJOBS.
       create_account_link: create a login.gov account
       create_account_page:
-        body: ''
+        body: Please create a login.gov account using the same email address you use
+          for USAJOBS
       header: First time here from USAJOBS?
