--- a/config/locales/service_providers/es.yml
+++ b/config/locales/service_providers/es.yml
@@ -3,6 +3,7 @@ es:
   service_providers:
     learn_more: Obtenga más información.
     sam:
+      header: "¿Ha venido de SAM?"
       account_page:
         body: Su antiguo nombre de usuario y contraseña SAM no funcionará. Por favor
           crea un login.gov cuenta usando la misma dirección de correo electrónico
@@ -13,7 +14,6 @@ es:
       create_account_page:
         body: Por favor crea un login.gov cuenta usando la misma dirección de correo
           electrónico que utiliza para SAM.
-      header: "¿Ha venido de SAM?"
     trusted_traveler:
       account_page:
         body: Su antiguo ID de usuario y contraseña de GOES no funcionarán. Favor
@@ -33,5 +33,6 @@ es:
         de correo electrónico primaria o secundaria que usó para USAJOBS para %{link}.
       create_account_link: crear su nueva cuenta de login.gov
       create_account_page:
-        body: ''
+        body: Por favor crea un login.gov cuenta usando la misma dirección de correo
+          electrónico que utiliza para USAJOBS.
       header: "¿Ha venido de USAJOBS?"
