--- a/config/locales/service_providers/fr.yml
+++ b/config/locales/service_providers/fr.yml
@@ -3,6 +3,7 @@ fr:
   service_providers:
     learn_more: En savoir plus.
     sam:
+      header: Êtes-vous venu(e) de SAM?
       account_page:
         body: Votre ancien nom d'utilisateur et mot de passe SAM ne marchera pas.
           Veuillez créer un nouveau compte login.gov avec la même adresse e-mail que
@@ -13,7 +14,6 @@ fr:
       create_account_page:
         body: Veuillez créer un compte login.gov avec la même adresse e-mail que vous
           avez utilisée pour SAM.
-      header: Êtes-vous venu(e) de SAM?
     trusted_traveler:
       account_page:
         body: Votre ancien nom d'utilisateur et mot de passe GOES ne marchera pas.
@@ -33,5 +33,6 @@ fr:
         e-mail principale ou secondaire que vous avez utilisée pour USAJOBS pour %{link}.
       create_account_link: créer votre nouveau compte login.gov
       create_account_page:
-        body: ''
+        body: Veuillez créer un compte login.gov avec la même adresse e-mail que vous
+          avez utilisée pour USAJOBS.
       header: Êtes-vous venu(e) de USAJOBS?
