--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -4,6 +4,7 @@ en:
     account:
       account_history: Account history
       account_management: Account Management
+      connected_apps: Applications
       login_info: Your account
       profile_info: Profile information
       reactivate: Reactivate your account
