LG-460: Added new banners for when we are not in production and no_pii_mode is activated.  The application should now have a more prominent indication that it is in test/demo mode.

--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -161,7 +161,7 @@ fr:
       sessions:
         id_information_message: tel qu'il apparaît sur votre carte d'identité officielle
         id_information_subtitle: Informations d'identification
-        no_pii: N'utilisez pas de véritables données personnelles (il s'agit d'une
+        no_pii: FAKE N'utilisez pas de véritables données personnelles (il s'agit d'une FAKE
           démonstration seulement)
         review_message: Lorsque vous entrez votre mot de passe, login.gov sécurise
           vos informations personnelles. Nous faisons cela pour nous assurer que personne
