--- a/config/locales/shared/fr.yml
+++ b/config/locales/shared/fr.yml
@@ -5,3 +5,5 @@ fr:
       gsa: Administration des services généraux des États-Unis
     usa_banner:
       official_site: Un site web officiel du gouvernement des États-Unis
+    fake_banner:
+      fake_site: Un site FAKE du gouvernement des États-Unis
